tests/NormalTests/paczka1/fuzzy1/26995816.err
Error in line 13: FeU5jxoEn S914 142,8
Error in line 16: A72 A626 15,8
Error in line 23: JGv A626 81,0
Error in line 25: JGv S122 72,2
Error in line 27: FeU5jxoEn A72 8,6
Error in line 26: RGzA8Y A72 14,3
Error in line 32: A72 A626 83,5
